--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,6 @@ dependencies:
   table_calendar: ^3.2.0
   carousel_slider: ^5.0.0
   flutter_launcher_icons: ^0.13.0
-  shorebird_code_push: ^2.0.3
   pdf: ^3.7.0
   file_picker: ^10.0.0
   universal_html: ^2.2.4
@@ -66,6 +65,7 @@ dependencies:
   crypto: ^3.0.6
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.1
+  local_auth: ^2.3.0
   
 
 dependency_overrides:
