Refactor color usage across teacher screens to use TColors.primary for consistency; update themes and add new splash screen with animations and logo.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   cached_network_image: ^3.4.1
   url_launcher: ^6.3.1
   local_auth: ^2.3.0
+  shimmer: ^3.0.0
   
 
 dependency_overrides:
