Refactor UI components and improve styling across teacher screens
- Updated shimmer effect colors in AllSessionsScreen, AttendanceReportsScreen, ClassListScreen, DashboardScreen, and MarkAttendanceScreen to enhance visual consistency.
- Changed FloatingActionButton to extended version in ClassListScreen for better usability.
- Added input formatters to section input in CreateClassScreen to restrict input to uppercase letters.
- Updated teacher profile screen title and logo to improve branding.
- Introduced LegalScreen to provide privacy policy, terms of service, and open source licenses with smooth scrolling functionality.
- Updated app theme colors for light and dark modes to use new constants.
- Added new icons for GitHub, LinkedIn, and Twitter to assets.
- Added smooth_scroll_multiplatform package for enhanced scrolling experience.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   url_launcher: ^6.3.1
   local_auth: ^2.3.0
   shimmer: ^3.0.0
+  smooth_scroll_multiplatform: ^1.0.8
   
 
 dependency_overrides:
@@ -98,6 +99,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/logos/
+    - assets/icons/github.png
     - assets/animations/
     - assets/images/onboarding_images/
     - shorebird.yaml
